test/classes/initializers/errors/fieldBeforeSuper.good
fieldBeforeSuper.chpl:5: In initializer:
fieldBeforeSuper.chpl:6: error: field initialization not allowed before super.init() or this.init()
